change title fix typo

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="row top-margin">
             <div class="col">
                 <p class="text-center">
-                    &copy; <span id="year"></span> African Women In Leadership Organisation</p>
+                    &copy; <span id="year"></span>Leadership Organisation</p>
                 <small class="form-text text-muted text-center animated swing infinite slower bottom-margin">Designed and Developed by Bolaji Oyedepo
                 </small>
             </div>
