change title fix typo

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="col">
                 <p class="text-center">
                     &copy; <span id="year"></span>Leadership Organisation</p>
-                <small class="form-text text-muted text-center animated swing infinite slower bottom-margin">Designed and Developed by Bolaji Oyedepo
+                <small class="form-text text-muted text-center animated swing infinite slower bottom-margin">Designed and Developed by Bolaji Oyedep.
                 </small>
             </div>
         </div>
