--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="particles-js"></div>
         <div class="row justify-content-center">
             <div class="col top-margin">
-                <h1 class="text-center boogaloo" style="font-size:300%; line-height: 30%;">NGEWE<br>
+                <h1 class="text-center boogaloo" style="font-size:300%; line-height: 30%;">BOLAJI OYEDEPO<br>
                     <br>
                     <span class="text-center slabo bold" style="font-size: 60%; font-weight: 250%; line-height: 100%;"> MY PROJECT</span></h1>
 
@@ -40,11 +40,9 @@
             <div class="col-md-5 my-auto">
                 <div class="row">
                     <div class="col">
-                        <p class="boogaloo text-center" style="font-size: 200%; color: #f10f11;">Share your</p>
-                        <p class="kaushan text-center" style="font-size:120%; margin-bottom: -33px; vertical-align: middle;">inspiring</p>
-                            <p class="oswald text-center" style="font-size:500%; margin-bottom: -33px;">IMPACT</p>
-                            <p class="merienda text-center" style="font-size: 200%;">story</p>
-                            <p class="text-center"></p>
+                        <p class="boogaloo text-center" style="font-size: 300%; color: #f10f11;">Solo$Sons</p>
+                        <p class="merienda text-center" style="font-size: 200%;">World of Multimedia</p>
+                        <p class="kaushan text-center" style="font-size:120%; margin-bottom: -33px; vertical-align: middle;">We build products that empower multimedia platforms and connect the users to solutions that enable productivity, growth, and discovery. Ask your questions and have an answer from more experienced persons. Feel free to amswer any question to which you know the answer.</p>
                     </div>
                 </div>
             </div>
@@ -103,8 +101,8 @@
         <div class="row top-margin">
             <div class="col">
                 <p class="text-center">
-                    &copy; <span id="year"></span>Leadership Organisation</p>
-                <small class="form-text text-muted text-center animated swing infinite slower bottom-margin">Designed and Developed by Bolaji Oyedep.
+                    &copy; <span id="year"></span>Multimedia Organisation</p>
+                <small class="form-text text-muted text-center animated swing infinite slower bottom-margin">Designed and Developed by Bolaji Oyedepo.
                 </small>
             </div>
         </div>
