--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="col-md-5 my-auto">
                 <div class="row">
                     <div class="col">
-                        <p class="boogaloo text-center" style="font-size: 300%; color: #f10f11;">Solo$Sons</p>
+                        <p class="boogaloo text-center" style="font-size: 300%; color: #f10f11;">BRAVO</p>
                         <p class="merienda text-center" style="font-size: 200%;">World of Multimedia</p>
                         <p class="kaushan text-center" style="font-size:120%; margin-bottom: -33px; vertical-align: middle;">We build products that empower multimedia platforms and connect the users to solutions that enable productivity, growth, and discovery. Ask your questions and have an answer from more experienced persons. Feel free to amswer any question to which you know the answer.</p>
                     </div>
