--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="particles-js"></div>
         <div class="row justify-content-center">
             <div class="col top-margin">
-                <h1 class="text-center boogaloo" style="font-size:300%; line-height: 30%;">BOLAJI OYEDEPO<br>
+                <h1 class="text-center boogaloo" style="font-size:300%; line-height: 30%;">AYOJAY<br>
                     <br>
                     <span class="text-center slabo bold" style="font-size: 60%; font-weight: 250%; line-height: 100%;"> MY PROJECT</span></h1>
 
